--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,11 @@
     "@angular/platform-browser": "~12.0.4",
     "@angular/platform-browser-dynamic": "~12.0.4",
     "@angular/router": "~12.0.4",
+    "@contentful/rich-text-html-renderer": "^15.2.0",
+    "@kolkov/angular-editor": "^1.2.0",
     "@kolkov/ngx-gallery": "^1.2.3",
     "@schematics/angular": "^9.1.0",
+    "@tinymce/tinymce-angular": "^4.2.4",
     "bootstrap": "4.1.1",
     "bootswatch": "^5.0.2",
     "font-awesome": "^4.7.0",
