--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -21,7 +21,8 @@
       "es2019",
       "es2018",
       "dom"
-    ]
+    ],
+    "strictNullChecks": false
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
